--- a/.gitignore
+++ b/.gitignore
@@ -1,90 +1,109 @@
-# Logs
-logs
+# =========================================
+# 🌐 Full Stack Project (React + Node.js)
+# Frontend: React (frontend/)
+# Backend: Node.js / Express (backend/)
+# =========================================
+
+# -------------------------------
+# 🧩 Node dependencies
+# -------------------------------
+node_modules/
+frontend/node_modules/
+backend/node_modules/
+
+# -------------------------------
+# ⚙️ Environment variables
+# -------------------------------
+# Root and environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Frontend & Backend .env files
+frontend/.env
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+
+backend/.env
+backend/.env.local
+backend/.env.development.local
+backend/.env.test.local
+backend/.env.production.local
+
+# -------------------------------
+# 🏗️ Build output
+# -------------------------------
+# React build
+frontend/build/
+frontend/dist/
+
+# Backend build or transpiled code (if using TypeScript/Babel)
+backend/build/
+backend/dist/
+
+# -------------------------------
+# 🧠 Logs & Debug
+# -------------------------------
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
+pids/
+*.pid
+*.seed
+*.pid.lock
 
-# Dependencies
-node_modules/
-/.pnp
-.pnp.js
+# -------------------------------
+# 🧰 IDE / Editor files
+# -------------------------------
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
 
-# Build outputs
-/dist
-/dist-ssr
-/build
-/.next
-/out
-
-# Cache
-.cache/
-.temp/
-.tmp/
-.vercel
-.netlify
-
-# Environment variables
-.env
-.env.*
-!.env.example
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# System Files
+# -------------------------------
+# 💻 System files
+# -------------------------------
 .DS_Store
 Thumbs.db
+*.swp
+*.tmp
+*.temp
 
-# Local development
-*.local
+# -------------------------------
+# 🧾 Test / Coverage
+# -------------------------------
+coverage/
+*.lcov
 
-# Debug logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# -------------------------------
+# 🔥 Firebase / Cloud (if used)
+# -------------------------------
+.firebase/
+.firebaserc
+storage-debug.log
 
-# Testing
-/coverage
+# -------------------------------
+# 🧹 Cache / Temp
+# -------------------------------
+.cache/
+frontend/.cache/
+backend/.cache/
+temp/
+tmp/
+local/
 
-# Production
-/build
-
-# Misc
-.DS_Store
-*.pem
-
-# Backend specific
-/backend/.env
-/backend/node_modules/
-/backend/coverage/
-/backend/logs/
-
-# Frontend specific
-/frontend/node_modules/
-/frontend/.next/
-/frontend/out/
-/frontend/.sass-cache/
-/frontend/.cache/
-/frontend/.env.local
-/frontend/.env.development.local
-/frontend/.env.test.local
-/frontend/.env.production.local
-
-# IDE specific
-.idea/
-.vscode/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# -------------------------------
+# 🚀 Misc / Archives
+# -------------------------------
+*.zip
+*.tar
+*.gz
+*.tgz
+*.bak
