--- a/backend/package.json
+++ b/backend/package.json
@@ -7,22 +7,18 @@
   "scripts": {
     "start": "node server/index.js",
     "dev": "nodemon server/index.js",
-    "build:frontend": "cd ../frontend && npm install && npm run build"
+    "build": "cd ../frontend && npm install && npm run build"
   },
-  "keywords": [],
-  "author": "Prajwal Nehe",
-  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "faker": "^5.5.3",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.11",
-    "path": "^0.12.7"
+    "bcryptjs": "2.4.3",
+    "cors": "2.8.5",
+    "dotenv": "16.4.5",
+    "express": "4.19.2",
+    "faker": "5.5.3",
+    "jsonwebtoken": "9.0.2",
+    "mongoose": "7.6.11"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "3.1.10"
   }
 }
